--- a/Projects/COVID19/COVID-19 Data App.ipynb
+++ b/Projects/COVID19/COVID-19 Data App.ipynb
@@ -136,22 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: MatplotlibDeprecationWarning: \n",
-      "The mpl_toolkits.axes_grid module was deprecated in Matplotlib 2.1 and will be removed two minor releases later. Use mpl_toolkits.axes_grid1 and mpl_toolkits.axisartist, which provide the same functionality instead.\n",
-      "  \"\"\"\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6e2d20ca83743eb9845c972891c2049",
+       "model_id": "a0cc339720a04d4082655a43bff4b682",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +159,7 @@
        "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +169,7 @@
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import *\n",
     "from ipywidgets.embed import embed_minimal_html\n",
-    "from mpl_toolkits.axes_grid.inset_locator import inset_axes\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from matplotlib import cm\n",
     "import matplotlib.ticker as mtick\n",
@@ -199,19 +190,19 @@
     "        \n",
     "    def geo_plot(self, date, column, state):\n",
     "        def setup_cbar():\n",
-    "            cmap = cm.get_cmap('Reds', 10)\n",
-    "            norm = cm.colors.Normalize(vmin = 0, vmax = self.vmax[column])\n",
+    "            self.cmap = cm.get_cmap('Reds', 10)\n",
+    "            self.norm = cm.colors.Normalize(vmin = 0, vmax = self.vmax[column])\n",
     "\n",
     "\n",
     "            size = \"5%\" \n",
-    "            sm = cm.ScalarMappable(cmap=cmap, norm=norm)\n",
+    "            sm = cm.ScalarMappable(cmap=self.cmap, norm=self.norm)\n",
     "            # empty array for the data range\n",
     "            sm._A = []\n",
     "            # make space for colorbar\n",
     "            divider = make_axes_locatable(self.ax[1])\n",
     "            cax = divider.append_axes(\"right\", size = size, pad = 0.1)\n",
     "            # add colorbar to figure\n",
-    "            cbar = self.fig.colorbar(sm, cax=cax, cmap = cmap)\n",
+    "            cbar = self.fig.colorbar(sm, cax=cax, cmap = self.cmap)\n",
     "            cbar.ax.tick_params(labelsize=18)\n",
     "            vals = list(cbar.ax.get_yticks())\n",
     "            vals.append(self.vmax[column])\n",
@@ -232,9 +223,8 @@
     "            self.state_data[column][\"United States\"].plot(ax = self.ax[0], legend = False,\n",
     "                                    color = \"C3\", alpha = 1, linewidth = 5)\n",
     "            self.interact_map_data[~self.interact_map_data[\"state\"].str.contains(\n",
-    "                \"Alaska|Hawaii\")].plot(column =  (column, date),\n",
-    "                                                 cmap = \"Reds\", ax=self.ax[1],\n",
-    "                                                 vmin = 0, vmax = self.vmax[column])\n",
+    "                \"Alaska|Hawaii\")].plot(column =  (column, date), ax=self.ax[1],\n",
+    "                                       cmap = self.cmap, vmin = 0, vmax = self.vmax[column])\n",
     "            self.axins = {}\n",
     "            self.axins[\"Alaska\"] = inset_axes(self.ax[1], width=\"17%\", height=\"35%\", loc=\"lower left\")\n",
     "            self.axins[\"Hawaii\"] = inset_axes(self.ax[1], width=\"50%\", height=\"40%\", loc=\"lower left\")\n",
@@ -243,18 +233,17 @@
     "                self.axins[st].set_yticks([])\n",
     "                self.axins[st].axis(\"off\")\n",
     "                self.interact_map_data[self.interact_map_data[\"state\"].str.contains(st)].plot(\n",
-    "                    column = (column,date),  ax = self.axins[st], cmap = \"Reds\", \n",
+    "                    column = (column,date),  ax = self.axins[st], cmap = self.cmap,\n",
     "                    vmin = 0, vmax = self.vmax[column])\n",
     "            \n",
     "            self.axins[\"Hawaii\"].set_xlim(-161, -155)\n",
     "            self.axins[\"Alaska\"].set_ylim(53, 71)\n",
     "        else:\n",
     "            self.interact_map_data[self.interact_map_data[\n",
-    "                \"state\"] ==state].plot(column =  (column,date), \n",
-    "                                                 cmap = \"Reds\", ax=self.ax[1],\n",
+    "                \"state\"] ==state].plot(column =  (column,date),  ax=self.ax[1], cmap = self.cmap,\n",
     "                                                 vmin = 0, vmax = self.vmax[column])\n",
     "            self.state_data[column, state].plot(ax = self.ax[0], legend = False,\n",
-    "                                    color = \"C3\", alpha = 1, linewidth = 5)\n",
+    "                                        cmap = self.cmap,color = \"C3\", alpha = 1, linewidth = 5)\n",
     "        self.ax[0].set_xlabel(\"\")\n",
     "        self.ax[1].set_title(state , fontsize = 36)\n",
     "interactive_map = geoPlot(covid_map_data, covid_panel, state_df_pivot)\n",
